Fixing image widths on mobile

--- a/_sass/_images.sass
+++ b/_sass/_images.sass
@@ -1,5 +1,11 @@
 img
-  max-width: 100%
+  max-width: 300px
+
+  +gt($phone)
+    max-width: 400px
+
+  +gt($tablet)
+    max-width: 700px
   
 .images
   +row
